# cuda-learning

Adv-learn-test/: 01_coalesced_memory_access.cu  02_shared_memory_optimization.cu  03_parallel_reduction.cu  04_warp_primitives.cu  05_advanced_matrix_ops.cu  06_streams_async.cu  07_occupancy_optimization.cu  08_texture_constant_memory.cu  09_atomics_synchronization.cu  10_unified_memory.cu  11_cublas_cufft_integration.cu  12_dynamic_parallelism.cu  13_multi_gpu_programming.cu  14_profiling_debugging.cu  15_cooperative_groups.cu
Interm-learn-test/: 01_matrix_multiplication.cu  02_softmax_activation.cu  03_relu_activations.cu  04_backpropagation.cu  05_convolution_cnn.cu  06_attention_mechanism.cu  07_layer_normalization.cu  08_adam_optimizer.cu  09_embedding_lookup.cu  10_gradient_clipping.cu  11_mixed_precision.cu  12_cross_entropy_loss.cu  13_transformer_block.cu
basic-learn-test/: 01_vector_addition.cu  02_matrix_multiplication.cu  03_reduction_sum.cu  04_shared_memory_transpose.cu  05_constant_memory.cu  06_texture_memory.cu  07_thread_sync_histogram.cu  08_dynamic_parallelism.cu  09_memory_coalescing.cu  10_cuda_streams.cu
cuda-libs/: 01_cublas_gemm.cu  02_cublas_batched.cu  03_cublas_tensor_core.cu  03_cublas_tensor_core_compat.cu  04_cufft_1d.cu  05_cufft_2d.cu  06_curand.cu  07_cusparse_spmv.cu  08_cusparse_spmm.cu  09_thrust_sort_reduce.cu  10_thrust_transform_scan.cu  11_cub_block_primitives.cu  12_cub_device_reduce.cu  13_cudnn_convolution.cu  14_cudnn_pooling_activation.cu  15_cudnn_batchnorm.cu  16_cudnn_rnn.cu  17_npp_image_filter.cu  18_cusolver_linear.cu  19_cooperative_groups.cu  20_multi_stream.cu  21_unified_memory.cu  22_attention_mechanism.cu  23_multi_gpu_nccl.cu  24_cuda_graphs.cu  Makefile  README.md
learn-test/: cache-mat-mul.cu  mat-mul.cu  time  time.cpp
mnist-cuda/: README.md  v1.py  v3.c  v5.cu
more-cpp/multithreading/: 01_basic_threads.cpp  02_thread_id_hardware.cpp  03_race_condition.cpp  04_mutex_basics.cpp  05_lock_types.cpp  06_condition_variable.cpp  07_producer_consumer.cpp  08_atomic_operations.cpp  09_deadlock.cpp  10_semaphore.cpp  11_shared_mutex.cpp  12_async_future.cpp  13_promise.cpp  14_thread_pool.cpp  15_parallel_algorithms.cpp  16_thread_local.cpp  17_barrier_latch.cpp  18_packaged_task.cpp  19_parallel_merge_sort.cpp  20_parallel_quicksort.cpp  CMakeLists.txt  README.md
more-cpp/multithreading/output/: 01_basic_threads  02_thread_id_hardware  03_race_condition  04_mutex_basics  05_lock_types  06_condition_variable  07_producer_consumer  08_atomic_operations  09_deadlock  10_semaphore  11_shared_mutex  12_async_future  13_promise  14_thread_pool  15_parallel_algorithms  16_thread_local  17_barrier_latch  18_packaged_task  19_parallel_merge_sort  20_parallel_quicksort  CMakeCache.txt  Makefile  cmake_install.cmake
more-cpp/stl/: 01_vector_basics.cpp  02_array_deque.cpp  03_list_forward_list.cpp  04_set_map.cpp  05_unordered_containers.cpp  06_container_adapters.cpp  07_iterators.cpp  08_algorithms_part1.cpp  09_algorithms_part2.cpp  10_lambda_functional.cpp  11_smart_pointers.cpp  12_strings.cpp  13_streams_io.cpp  14_regex.cpp  15_chrono_time.cpp  16_threading.cpp  17_filesystem.cpp  18_optional_variant_any.cpp  19_tuple_pair.cpp  20_exception_handling.cpp  21_templates.cpp  22_type_traits.cpp  23_move_semantics.cpp  24_ranges_views.cpp  CMakeLists.txt  README.md
more-cpp/templates-cpp/: 01_typedef_examples.cpp  02_using_examples.cpp  03_struct_examples.cpp  04_function_templates.cpp  05_class_templates.cpp  06_template_specialization.cpp  07_combining_all.cpp  08_enum_examples.cpp  CMakeLists.txt  README.md  result
namespace-learn/: 01_basic_namespace.cpp  02_nested_namespace.cpp  03_multiple_namespaces.cpp  04_namespace_alias.cpp  05_using_directive.cpp  06_anonymous_namespace.cpp  07_geometry.cpp  07_geometry.h  07_main.cpp  08_namespace_classes.cpp  09_inline_namespace.cpp  10_real_world_example.cpp  11_new-self-test.cpp  README.md  compile_and_run.sh  result
openmp-basic/: 01_hello_world.c  02_thread_info.c  03_parallel_for.c  04_loop_scheduling.c  05_private_shared.c  06_critical_section.c  07_atomic.c  08_reduction.c  09_barrier.c  10_sections.c  11_nested_loops.c  12_tasks.c  13_race_condition.c  14_matrix_multiply.c  15_pi_calculation.c  16_firstprivate_lastprivate.c  17_advanced_loop_directives.c  18_simd_vectorization.c  19_advanced_atomic.c  20_task_dependencies.c  21_combined_clauses.c  22_pragma_reference.c  Makefile  README.md  cpp_01_vector_ops.cpp  cpp_02_matrix_class.cpp  (+6 more)
(+117 files in other folders)
